# InvestingBuddy

./: .env.example  .gitignore  AGENTIC_DEVELOPMENT.md  CLAUDE.md  Readme.md  docker-compose.yml
apps/api/: alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_add_initial_tables.py  002_add_sources_and_citations.py  003_add_citation_provenance_fields.py  004_add_review_workflow.py  005_add_financial_snapshots.py  006_add_discovery_screener.py  007_add_scorecards.py  008_add_final_report_fields.py
apps/api/app/: main.py
apps/api/app/agents/: base.py
apps/api/app/agents/analysis_council/: __init__.py  bear_case_agent.py  (+5 more)
apps/api/app/core/: config.py
apps/api/app/integrations/: financial_data_provider.py  financial_data_service.py  llm_provider.py
apps/api/app/models/: __init__.py  agent_run.py  company.py  financial_snapshot.py  report.py  review_event.py  scorecard.py  screening.py  source.py
apps/api/app/schemas/: agent.py  company.py  discovery.py  final_report.py  report.py  scoring.py  source.py
apps/api/app/services/: agent_run_service.py  citation_service.py  company_discovery_service.py  company_service.py  final_report_generator.py  identifier_resolver.py  report_service.py  report_validation_service.py  scoring_engine.py  scoring_service.py  screener.py  source_service.py
apps/api/app/workflows/: company_analysis.py  snapshot_builder.py
apps/api/tests/: conftest.py  test_agent_run_service.py  test_citation_service.py  test_citation_validator.py  test_citations.py  test_companies.py  test_financial_data_providers.py  test_health.py  test_integration_live_providers.py  test_phase10_reports_api.py  test_phase11_review_workflow.py  test_phase13_eodhd_provider.py  test_phase14_discovery_screener.py  test_phase15_scoring.py  test_phase16_final_report.py  test_phase5_live_providers.py  test_phase6_snapshot_workflow.py  test_phase7_azure_openai_real.py  test_phase7_llm_agent.py  test_phase8_research_team.py  test_phase9_analysis_council.py  test_report_validation.py  test_source_service.py  test_sources.py  test_workflows.py
apps/api/tests/fixtures/: eodhd_eod_aapl.json  eodhd_fundamentals_aapl.json  eodhd_fundamentals_sparse.json  eodhd_search_apple.json  gleif_apple_inc.json  gleif_empty_result.json  sec_edgar_aapl_submissions.json  stooq_aapl_us.csv
(+93 files in other folders)
